# i-spent-a-lot-of-time-coming-up-with-a-good-project-name-so-people-would-know-what-this-project-does

./: CMakeLists.txt  README.md
cmake/: dds.cmake  wuffs.cmake
example/: CMakeLists.txt  main.cpp
include/: BMP.h  ImageFormat.h  ImageProcessor.h
src/: BMP.cpp  ImageProcessor.cpp
